# ApiKeyRouter

./: .bandit  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEST_TYPES_DOCUMENTATION.md  benchmark_report.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.py
.github/: RELEASE_NOTES_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  security.yml
docs/: use-cases.md
docs/architecture/: VISUALIZING_DIAGRAMS.md  checklist-results-report.md  coding-standards.md  component-specifications.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security-audit-process.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/examples/: README.md  basic-usage.py  budget-enforcement.py  comprehensive-usage-example.py  cost-optimized-routing.py  custom-adapter.py  proxy-setup.py
docs/guides/: docker-deployment.md  docker-testing.md  github-repository-setup.md  migration-litellm.md  migration-llm-api-key-proxy.md  migration-manual.md  migration-overview.md  quick-start.md  release-process.md  user-guide.md
docs/tutorials/: building-custom-adapter.md
docs/workflow/: product-flow.md
scripts/: security-scan.py  security-scan.sh
