[project]
name = "apikeyrouter"
version = "0.1.0"
description = "Intelligent API key routing library and proxy"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.poetry]
name = "apikeyrouter-meta"
version = "0.0.1"
description = "Meta package to bundle core/proxy"
authors = ["Your Name <you@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
apikeyrouter-core = {path = "packages/core", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
locust = "^2.24.1"
python-dotenv = "^1.0.0"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
detect-secrets = "^1.5.0"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["packages/core/apikeyrouter", "packages/proxy/apikeyrouter_proxy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
fail_under = 80
# Note: Per-module thresholds (90% for domain logic) should be enforced
# via CI/CD pipeline or coverage tooling that supports module-level thresholds

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
explicit_package_bases = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "beanie.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "packages.core.tests.*",
    "packages.proxy.tests.*",
]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "dist",
    "build",
    "*.egg-info",
    "docs/examples",
    "packages/*/examples",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["apikeyrouter", "apikeyrouter_proxy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "benchmark_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["packages/core/tests", "packages/proxy/tests"]
pythonpath = ["packages/proxy", "packages/core"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--import-mode=importlib",
    "-m", "not ui",  # Exclude UI tests by default
]
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "UI",  # Exclude UI directory from test collection
    "ui",  # Exclude ui directory (case-insensitive)
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Performance benchmark tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "ui: UI tests (disabled by default)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
